--- a/manifests/mysql-deployment.yaml
+++ b/manifests/mysql-deployment.yaml
@@ -12,12 +12,19 @@ spec:
   ##
   # Create service selector labels here
   ##
+  selector:
+    app: wordpress
+    tier: mysql
+
+  
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: wordpress-mysql
-data:
+data: #ME LINE 23-24
+  database: 'wordpress'
+  user: 'wordpress'
   ##
   # create non-sensative data attributes
   ##
@@ -33,10 +40,19 @@ spec:
   ##
   # Create app label selectors here
   ##
+  replicas: 1
+  selector:
+    matchLabels:
+    app: wordpress
+    tier: mysql 
   template:
     ##
     # Create metadata labels here
     ##
+    metadata:
+      labels:
+        app: wordpress
+        tier: mysql
     spec:
       containers:
       - image: mysql:8.0
@@ -45,12 +61,32 @@ spec:
         ##
         # mount non-sensitive environment vars from configmap
         # MYSQL_DATABASE | MYSQL_USER
-        ##
+        ## ME  LINE 53-62
+        - name: MYSQL_DATABASE
+          valueFrom:
+            configMapKeyRef:
+            name: wordpress-mysql
+            key: database
+        - name: MYSQL_USER
+          valueFrom:
+            configMapKeyRef:
+            name: wordpress-mysql
+            key: user
 
         ##
         # mount sensitive environment vars from secret
         # MYSQL_ROOT_PASSWORD | MYSQL_PASSWORD
-        ##
+        ## ME LINE 68-80
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+            name: database
+            key: root-password
+        - name: MYSQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+            name: database
+            key: user-password
         ports:
         - containerPort: 3306
           name: mysql
@@ -58,7 +94,25 @@ spec:
       # define volume mounts here, be sure to reference
       # the PVC in your container spec
       ##
+    volumeMounts:
+    - name: mysql-pvc
+      mountPath: /var/lib/mysql 
+    volumes: 
+    - name: mysql-pvc
+      persistentVolumeClaim:
+        claimName: mysql-pv-claim
 ---
 ##
 # Create persistent volume claim here
 ##
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+spec:
+  accessMode:
+  - ReadWriteOnce
+  storageClassName: standard
+  resources:
+    requests:
+    storage: 1Gi
