yaml files version3

--- a/manifests/wp-deployment.yaml
+++ b/manifests/wp-deployment.yaml
@@ -104,7 +104,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: wp-pv-claim
 spec:
-  accessMode:
+  accessModes:
   - ReadWriteOnce
   storageClassName: standard
   resources:
