--- a/manifests/mysql-deployment.yaml
+++ b/manifests/mysql-deployment.yaml
@@ -97,10 +97,10 @@ spec:
         volumeMounts:
         - name: mysql-pvc
           mountPath: /var/lib/mysql 
-    volumes: 
-    - name: mysql-pvc
-      persistentVolumeClaim:
-        claimName: mysql-pv-claim
+      volumes: 
+       - name: mysql-pvc
+         persistentVolumeClaim:
+            claimName: mysql-pv-claim
 ---
 ##
 # Create persistent volume claim here
@@ -110,7 +110,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
 spec:
-  accessMode:
+  accessModes:
   - ReadWriteOnce
   storageClassName: standard
   resources:
