--- a/manifests/mysql-deployment.yaml
+++ b/manifests/mysql-deployment.yaml
@@ -112,7 +112,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: 
   resources:
     requests:
       storage: 1Gi
