--- a/manifests/wp-deployment.yaml
+++ b/manifests/wp-deployment.yaml
@@ -106,7 +106,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: 
   resources:
     requests:
       storage: 1Gi
